[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expt"
version = "1.0.0"
description = "."
readme = "README.md"
authors = [{ name = "Rishabh Ranjan", email = "rishabhranjan0207@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
	"hiredis",
	"matplotlib",
	"pandas",
	"redis[hiredis]",
	"rq",
	"rq-dashboard",
	"seaborn",
	"torch",
	"tqdm",
	"wandb",
]
