[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "expt"
version = "1.0.0"
description = "."
readme = "README.md"
authors = [{ name = "Rishabh Ranjan", email = "rishabhranjan0207@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
	"hiredis",
	"matplotlib",
	"pandas",
	"redis[hiredis]",
	"rq",
	"rq-dashboard",
	"seaborn",
	"torch",
	"tqdm",
	"wandb",
]
